=== 2017-01-09
* Enhancement
  * Added params class instance variable to hold hash values that can be used in the page
  * Added ability to insert ERB into page_url string and have it access params
=== 2017-01-03
* Enhancement
  * Added selected_values method to SelectList to get values of all selected elements
  * Added ability to pass classname as string to visit_page, on_page, and if_page methods
=== Version v1.1.5/ 2016-12-31
* Enhancement
  * Added method to get the id of an Element
=== 2016-12-30
* Enhancement
  * Added hover method to Element. Browser support is limited
=== 2016-12-28
* Enhancement
  * Updated Table [] method to return a row that has matching partial text in any column
  * Updated TableRow [] method to return column that matching partial text in any column
  * Added the following aliased methods to their corresponding Accessors method
    a => link
    hidden => hidden_field
    img => image
    li => list_item
    ol => ordered_list
    p => paragraph
    radio => radio_button
    select => select_list
    td => cell
    textarea => text_area
    ul => unordered_list
  * Added support for the following new elements
    Area
    Canvas
    Audio
    Video
  * Added ability to find list_item by :text
===Version v1.1.4/ 2016-12-27
* Enhancement
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Added flash method to Element to temporarily change the background color
  * Added when_not_present method to Element
  * Added default override of page level waits - Druid.default_page_wait
  * Added default override of element level waits - Druid.default_element_wait
  * Added the ability to find a TableRow by providing a String to the [] method
  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
  * Updated link to be able to identify by title
  * Updated div to be able to identify by title